--- a/page_vc.html
+++ b/page_vc.html
@@ -21,7 +21,7 @@
     </div>
     <article>
         <h2>변수와 상수</h2>
-        변수는 바뀔 수 있는 값이고, 상수는 바뀌지 않는 값입니다. 안녕하세요
+        변수는 바뀔 수 있는 값이고, 상수는 바뀌지 않는 값입니다.
     </article>
 </body>
 </html>
